[gd_scene load_steps=6 format=3 uid="uid://dvn4vmwm0rsdv"]

[ext_resource type="Texture2D" uid="uid://4waay5jugkd" path="res://sprites/staff.png" id="1_0mpdh"]
[ext_resource type="Script" uid="uid://dxq5djjbixpa4" path="res://scripts/staff.gd" id="1_3gxsk"]
[ext_resource type="AudioStream" uid="uid://iya10hrcfgmn" path="res://sounds/hitHurt (2).wav" id="3_ov8dy"]
[ext_resource type="PackedScene" uid="uid://cquja40korh62" path="res://scenes/tele.tscn" id="4_xh1k6"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xh1k6"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("3_ov8dy")

[node name="bossStaff" type="Node2D"]
script = ExtResource("1_3gxsk")

[node name="RotationOffset" type="Node2D" parent="."]

[node name="staffSprite" type="Sprite2D" parent="RotationOffset"]
position = Vector2(72, -10)
texture = ExtResource("1_0mpdh")

[node name="shootPos" type="Marker2D" parent="RotationOffset/staffSprite"]
position = Vector2(10, -60)

[node name="Tele" parent="RotationOffset/staffSprite" instance=ExtResource("4_xh1k6")]
position = Vector2(10, -60)
lifetime = 1.0
speed_scale = 3.0
local_coords = true
emission_sphere_radius = 40.0
spread = 180.0
scale_amount_min = 2.0
scale_amount_max = 3.0

[node name="shootTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_xh1k6")
volume_db = -10.0

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="AttackDuration"]
wait_time = 2.0
one_shot = true

[node name="attackCD" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
[connection signal="timeout" from="AttackDuration/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attackCD" to="." method="_on_attack_cd_timeout"]
